# NMEAPlot

./: .gitignore  CMakeLists.txt  LICENSE  NMEAPlot_zh_CN.ts  README.md  main.cpp  mainwindow.ui
.github/workflows/: macintosh.yml  windows.yml
resources/: icon.icns
